# code128

./: .gitignore  .travis.yml  COPYING  Makefile  Makefile.am  Makefile.in  Makefile_windows  README.md  clar.h  clar_main.c  code128.c  code128.h  code128png.c  config.h.in  configure  configure.ac  encode.c  mc.yaml  test.sh
.github/workflows/: ci.yaml
